# gmail_filter_manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml
src/gmail_filter_manager/: __init__.py  gfm_extract  gfm_make
test/: filters.xml  mailFilters.xml  mailFilters.yaml
